[package]
name = "embed-nu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-command = "0.69.1"
nu-engine = "0.69.1"
nu-parser = "0.69.1"
nu-protocol = "0.69.1"
paste = "1.0.9"
thiserror = "1.0.37"
